[package]
name = "archlinux-repo"
version = "0.1.4"
authors = ["Aleksei Arsenev <alesharik4@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Arch Linux repositories parser"
readme = "README.md"
repository = "https://github.com/alesharik/archlinux-repo-rs"
keywords = ["archlinux", "repository", "client"]
categories = ["asynchronous"]
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.15"
tokio = { version = "1.7.1", features = ["macros", "rt"] }
chrono = "0.4.19"
flate2 = "1.0.20"
tar = "0.4.35"
reqwest = "0.11.3"
hyper = "0.14.9"
log = "0.4.14"
lazy_static = "1.4.0"
archlinux-repo-parser = { path = "parser", version = "0.1.4" }

[workspace]
members = ["parser"]