[package]
name = "archlinux-repo"
version = "0.1.6"
authors = ["Aleksei Arsenev <alesharik4@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Arch Linux repositories parser"
readme = "README.md"
repository = "https://github.com/alesharik/archlinux-repo-rs"
keywords = ["archlinux", "repository", "client"]
categories = ["asynchronous"]
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
futures = "0.3.17"
tokio = { version = "1.14.0", features = ["macros", "rt"] }
chrono = "0.4.19"
flate2 = "1.0.21"
tar = "0.4.37"
reqwest = "0.11.4"
hyper = "0.14.12"
log = "0.4.14"
lazy_static = "1.4.0"
archlinux-repo-parser = { path = "parser", version = "0.1.6" }

[workspace]
members = ["parser"]